# who_cited

./: README.md  app.py  gs.py  openalex.py  pyproject.toml  s2.py  serpapi_client.py
static/: script.js  style.css
templates/: index.html
tests/: test_app.py
tests/fixtures/: gs_captcha_page.html  gs_results_page.html
