[project]
name = "who-cited"
version = "0.1.0"
description = "Paste a Google Scholar URL, see every paper that cites it."
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0,<4",
    "requests>=2.32,<3",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
